--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,17 @@
 {
   "name": "Time Boxing Checklist",
-  "short_name": "TimeBox",
-  "start_url": "/index.html",
+  "short_name": "TB Checklist",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#f2f5fb",
   "theme_color": "#007aff",
+  "description": "Checklist harian + rekap bulanan + jurnal — PWA-ready",
   "icons": [
     {
-      "src": "data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='192' height='192'%3E%3Crect width='100%25' height='100%25' fill='%23007aff' rx='36'/%3E%3Ctext x='50%25' y='55%25' font-size='84' text-anchor='middle' fill='%23fff'%3E✓%3C/text%3E%3C/svg%3E",
-      "sizes": "192x192",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='512' height='512'%3E%3Crect width='100%25' height='100%25' fill='%23007aff' rx='96'/%3E%3Ctext x='50%25' y='55%25' font-size='220' text-anchor='middle' fill='%23fff'%3E✓%3C/text%3E%3C/svg%3E",
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='100%25' height='100%25' rx='80' fill='%23007aff'/%3E%3Ctext x='50%25' y='55%25' font-size='260' text-anchor='middle' fill='white' font-family='system-ui, -apple-system, Roboto, Arial'%3ET%3C/text%3E%3C/svg%3E",
       "sizes": "512x512",
-      "type": "image/svg+xml"
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     }
   ]
 }
